# TokenDaemon

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Todo  conanfile.py
include/: daemon.hpp  define.h.template  imap_handler.hpp  logger.hpp  os.hpp  utils.hpp
old_files/: daemon_old.cpp  old_daemon.hpp
src/: daemon.cpp  imap_handler.cpp  logger.cpp  main.cpp  os.cpp  utils.cpp
